# pchess

./: .gitignore  demo.py  pyproject.toml  train.py
parallel_chess/: __init__.py
parallel_chess/core/: board.py  engine.py  rules.py
parallel_chess/env/: chess_env.py  wrappers.py
parallel_chess/render/: visualizer.py
